# panda_ros_simulation

./: .gitignore  README.md  final_robot.urdf
src/data_collector_pkg/: CMakeLists.txt  package.xml
src/data_collector_pkg/src/: DataCollect.cpp
src/panda_control/: CMakeLists.txt  package.xml
src/panda_control/launch/: testing.launch.py
src/panda_control/src/: testing.cpp
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: franka_panda.ros2_control.xacro  franka_panda.srdf  franka_panda.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/panda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/panda_movit2/: CMakeLists.txt  package.xml
src/panda_ros_simulation/: CMakeLists.txt  Moveit_withgz&_Rviz.md  package.xml  ros2_contol_with_gz&_Rviz.md  ros2_contol_with_gz&_Rviz.mmd
src/panda_ros_simulation/config/: controller.yaml
src/panda_ros_simulation/launch/: Clas_start_simu.launch.py  IG_start_simu.launch.py  display.launch.py  gazebo.launch.py  rviz.launch.py
src/panda_ros_simulation/rviz/: display.rviz
src/panda_ros_simulation/urdf/: FinalPanda.urdf  RGBDCam.urdf.xacro  gripper.urdf.xacro  macros.urdf.xacro  panda.urdf.xacro  props.urdf.xacro
src/panda_ros_simulation/world/: Main  Main.world  backup
