<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_ros_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="padidarapuakhilsai@yahoo.com">akhil</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
    <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

    <!-- ros2_control stack -->
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>velocity_controllers</depend>

  <!-- Gazebo Classic -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <!-- Gazebo Ignition (Fortress on Humble) -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
